Final cleanup: Fix main.js duplicates, Deck system, and Creator UI height

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <div class="menu">
                 <button id="btn-create-room">ルーム作成</button>
                 <button id="btn-card-creator">カードを作る</button>
+                <button id="btn-deck-select">デッキ選択</button>
                 <div class="join-group">
                     <input type="text" id="input-room-id" placeholder="ルームID (例: 1234)" maxlength="6">
                     <button id="btn-join-room">参加</button>
