feat: overhaul battle rules (full hand, single use), expand card pool to 24, add player name setting, and fix turn sync

--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
         <div id="title-screen">
             <h1>BATTLE SUPER Z</h1>
             <div class="menu">
+                <div class="input-group" style="width: auto; margin-bottom: 20px;">
+                    <label style="color: #aaa; font-size: 0.9rem;">プレイヤー名</label>
+                    <input type="text" id="input-player-name" placeholder="名無し" maxlength="10" style="width: 200px;">
+                </div>
                 <button id="btn-create-room">ルーム作成</button>
                 <button id="btn-card-creator">カードを作る</button>
-                <button id="btn-deck-select">デッキ選択</button>
+                <button id="btn-deck-select">デッキ編成</button>
                 <div class="join-group">
                     <input type="text" id="input-room-id" placeholder="ルームID (例: 1234)" maxlength="6">
                     <button id="btn-join-room">参加</button>
