feat: add rules explanation page and fix lint errors in main.js

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <button id="btn-create-room">ルーム作成</button>
                 <button id="btn-card-creator">カードを作る</button>
                 <button id="btn-deck-select">デッキ編成</button>
+                <button id="btn-rules">ルール説明</button>
                 <div class="join-group">
                     <input type="text" id="input-room-id" placeholder="ルームID (例: 1234)" maxlength="6">
                     <button id="btn-join-room">参加</button>
