AI強化、連戦時のバグ修正、およびサーバー安定性の向上

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <input type="text" id="input-player-name" placeholder="名無し" maxlength="10" style="width: 200px;">
                 </div>
                 <button id="btn-create-room">ルーム作成</button>
+                <button id="btn-solo-mode" class="accent-btn">ソロモード</button>
                 <button id="btn-card-creator">カードを作る</button>
                 <button id="btn-deck-select">デッキ編成</button>
                 <button id="btn-gallery">カード図鑑</button>
